language/move-lang/tests/move_check/parser/struct_public.move
module 0x42::M {
    // visibility modifiers on structs fail during parsing
    public struct Foo {}
}
